credence/frontend/lexer.cc
/* Generated by re2c 4.5.1 on Sun Aug  2 01:17:09 2026 */
#line 1 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
/*****************************************************************************
 * Copyright (c) Jahan Addison
 *
 * This software is dual-licensed under the Apache License, Version 2.0 or
 * the GNU General Public License, Version 3.0 or later.
 *
 * You may use this work, in part or in whole, under the terms of either
 * license.
 *
 * See the LICENSE.Apache-v2 and LICENSE.GPL-v3 files in the project root
 * for the full text of these licenses.
 ****************************************************************************/

// GENERATED FILE -- do not edit lexer.cc by hand.
//
// Regenerate with:
//   re2c -o credence/frontend/lexer.cc credence/frontend/lexer.re
//
// Token rules are a direct port of the lexical grammar in grammar.lark

#include <credence/frontend/lexer.h>

namespace credence::frontend {

std::string_view token_type_to_string(Token_Type type)
{
    switch (type) {
        case Token_Type::END_OF_FILE:
            return "END_OF_FILE";
        case Token_Type::INVALID:
            return "INVALID";
        case Token_Type::IDENTIFIER:
            return "IDENTIFIER";
        case Token_Type::INTEGER:
            return "INTEGER";
        case Token_Type::FLOAT:
            return "FLOAT";
        case Token_Type::CHAR_LITERAL:
            return "CHAR_LITERAL";
        case Token_Type::STRING_LITERAL:
            return "STRING_LITERAL";
        case Token_Type::BOOL_LITERAL:
            return "BOOL_LITERAL";
        case Token_Type::KEYWORD_AUTO:
            return "KEYWORD_AUTO";
        case Token_Type::KEYWORD_EXTRN:
            return "KEYWORD_EXTRN";
        case Token_Type::KEYWORD_CASE:
            return "KEYWORD_CASE";
        case Token_Type::KEYWORD_GOTO:
            return "KEYWORD_GOTO";
        case Token_Type::KEYWORD_UNION:
            return "KEYWORD_UNION";
        case Token_Type::KEYWORD_IF:
            return "KEYWORD_IF";
        case Token_Type::KEYWORD_ELSE:
            return "KEYWORD_ELSE";
        case Token_Type::KEYWORD_RETURN:
            return "KEYWORD_RETURN";
        case Token_Type::KEYWORD_WHILE:
            return "KEYWORD_WHILE";
        case Token_Type::KEYWORD_SWITCH:
            return "KEYWORD_SWITCH";
        case Token_Type::KEYWORD_BREAK:
            return "KEYWORD_BREAK";
        case Token_Type::LPAREN:
            return "LPAREN";
        case Token_Type::RPAREN:
            return "RPAREN";
        case Token_Type::LBRACE:
            return "LBRACE";
        case Token_Type::RBRACE:
            return "RBRACE";
        case Token_Type::LBRACKET:
            return "LBRACKET";
        case Token_Type::RBRACKET:
            return "RBRACKET";
        case Token_Type::COMMA:
            return "COMMA";
        case Token_Type::QUESTION:
            return "QUESTION";
        case Token_Type::COLON:
            return "COLON";
        case Token_Type::DOT:
            return "DOT";
        case Token_Type::SEMICOLON:
            return "SEMICOLON";
        case Token_Type::ASSIGN:
            return "ASSIGN";
        case Token_Type::PLUS:
            return "PLUS";
        case Token_Type::MINUS:
            return "MINUS";
        case Token_Type::STAR:
            return "STAR";
        case Token_Type::SLASH:
            return "SLASH";
        case Token_Type::PERCENT:
            return "PERCENT";
        case Token_Type::AMP:
            return "AMP";
        case Token_Type::PIPE:
            return "PIPE";
        case Token_Type::CARET:
            return "CARET";
        case Token_Type::TILDE:
            return "TILDE";
        case Token_Type::BANG:
            return "BANG";
        case Token_Type::EQ:
            return "EQ";
        case Token_Type::NEQ:
            return "NEQ";
        case Token_Type::LT:
            return "LT";
        case Token_Type::LE:
            return "LE";
        case Token_Type::GT:
            return "GT";
        case Token_Type::GE:
            return "GE";
        case Token_Type::SHL:
            return "SHL";
        case Token_Type::SHR:
            return "SHR";
        case Token_Type::AND_AND:
            return "AND_AND";
        case Token_Type::OR_OR:
            return "OR_OR";
        case Token_Type::INC:
            return "INC";
        case Token_Type::DEC:
            return "DEC";
    }
    return "INVALID";
}

#line 141 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
#define YYMAXFILL 8
#line 138 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"

namespace {
constexpr std::size_t PADDING = (YYMAXFILL > 0) ? YYMAXFILL : 1;
}

Lexer::Lexer(std::string source)
    : source_(std::move(source))
{
    source_.append(PADDING, '\0');
    cursor_ = source_.data();
    marker_ = source_.data();
    limit_ = source_.data() + source_.size();
    token_start_ = cursor_;
}

void Lexer::advance_line_column(const char* from, const char* to)
{
    for (const char* p = from; p < to; ++p) {
        if (*p == '\n') {
            ++line_;
            column_ = 1;
        } else {
            ++column_;
        }
    }
}

Token Lexer::make_token(Token_Type type)
{
    Token token;
    token.type = type;
    token.lexeme = std::string_view(
        token_start_, static_cast<std::size_t>(cursor_ - token_start_));
    token.start_pos = static_cast<std::size_t>(token_start_ - source_.data());
    token.end_pos = static_cast<std::size_t>(cursor_ - source_.data());
    token.line = line_;
    token.column = column_;
    advance_line_column(token_start_, cursor_);
    token.end_column = column_;
    return token;
}

Token Lexer::next()
{
    for (;;) {
        token_start_ = cursor_;

#line 193 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        {
            char yych;
            unsigned int yyaccept = 0;
            yych = *cursor_;
            switch (yych) {
                case 0x00:
                    goto yy1;
                case '\t':
                case '\n':
                case '\r':
                case ' ':
                    goto yy4;
                case '!':
                    goto yy6;
                case '"':
                    goto yy8;
                case '%':
                    goto yy9;
                case '&':
                    goto yy10;
                case '\'':
                    goto yy12;
                case '(':
                    goto yy13;
                case ')':
                    goto yy14;
                case '*':
                    goto yy15;
                case '+':
                    goto yy16;
                case ',':
                    goto yy18;
                case '-':
                    goto yy19;
                case '.':
                    goto yy21;
                case '/':
                    goto yy22;
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                    goto yy24;
                case ':':
                    goto yy26;
                case ';':
                    goto yy27;
                case '<':
                    goto yy28;
                case '=':
                    goto yy30;
                case '>':
                    goto yy32;
                case '?':
                    goto yy34;
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'd':
                case 'h':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'v':
                case 'x':
                case 'y':
                case 'z':
                    goto yy35;
                case '[':
                    goto yy37;
                case ']':
                    goto yy38;
                case '^':
                    goto yy39;
                case 'a':
                    goto yy40;
                case 'b':
                    goto yy41;
                case 'c':
                    goto yy42;
                case 'e':
                    goto yy43;
                case 'f':
                    goto yy44;
                case 'g':
                    goto yy45;
                case 'i':
                    goto yy46;
                case 'r':
                    goto yy47;
                case 's':
                    goto yy48;
                case 't':
                    goto yy49;
                case 'u':
                    goto yy50;
                case 'w':
                    goto yy51;
                case '{':
                    goto yy52;
                case '|':
                    goto yy53;
                case '}':
                    goto yy55;
                case '~':
                    goto yy56;
                default:
                    goto yy2;
            }
        yy1:
            ++cursor_;
#line 205 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::END_OF_FILE);
            }
#line 299 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy2:
            ++cursor_;
        yy3:
#line 267 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::INVALID);
        }
#line 305 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy4:
            yych = *++cursor_;
            switch (yych) {
                case '\t':
                case '\n':
                case '\r':
                case ' ':
                    goto yy4;
                default:
                    goto yy5;
            }
        yy5:
#line 206 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            advance_line_column(token_start_, cursor_);
            continue;
        }
#line 318 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy6:
            yych = *++cursor_;
            switch (yych) {
                case '=':
                    goto yy57;
                default:
                    goto yy7;
            }
        yy7:
#line 263 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::BANG);
        }
#line 328 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy8:
            yyaccept = 0;
            yych = *(marker_ = ++cursor_);
            switch (yych) {
                case 0x00:
                case '\n':
                case '\r':
                    goto yy3;
                default:
                    goto yy59;
            }
        yy9:
            ++cursor_;
#line 258 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::PERCENT);
            }
#line 342 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy10:
            yych = *++cursor_;
            switch (yych) {
                case '&':
                    goto yy63;
                default:
                    goto yy11;
            }
        yy11:
#line 259 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::AMP);
        }
#line 352 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy12:
            yyaccept = 0;
            yych = *(marker_ = ++cursor_);
            if (yych <= 0x00)
                goto yy3;
            goto yy64;
        yy13:
            ++cursor_;
#line 230 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::LPAREN);
            }
#line 362 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy14:
            ++cursor_;
#line 231 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::RPAREN);
            }
#line 367 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy15:
            ++cursor_;
#line 256 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::STAR);
            }
#line 372 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy16:
            yych = *++cursor_;
            switch (yych) {
                case '+':
                    goto yy65;
                default:
                    goto yy17;
            }
        yy17:
#line 254 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::PLUS);
        }
#line 382 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy18:
            ++cursor_;
#line 236 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::COMMA);
            }
#line 387 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy19:
            yych = *++cursor_;
            switch (yych) {
                case '-':
                    goto yy66;
                default:
                    goto yy20;
            }
        yy20:
#line 255 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::MINUS);
        }
#line 397 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy21:
            ++cursor_;
#line 239 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::DOT);
            }
#line 402 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy22:
            yyaccept = 1;
            yych = *(marker_ = ++cursor_);
            switch (yych) {
                case '*':
                    goto yy67;
                case '/':
                    goto yy68;
                default:
                    goto yy23;
            }
        yy23:
#line 257 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::SLASH);
        }
#line 414 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy24:
            yyaccept = 2;
            yych = *(marker_ = ++cursor_);
            switch (yych) {
                case '.':
                    goto yy70;
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                    goto yy24;
                case 'F':
                case 'f':
                    goto yy71;
                default:
                    goto yy25;
            }
        yy25:
#line 225 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::INTEGER);
        }
#line 437 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy26:
            ++cursor_;
#line 238 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::COLON);
            }
#line 442 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy27:
            ++cursor_;
#line 240 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::SEMICOLON);
            }
#line 447 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy28:
            yych = *++cursor_;
            switch (yych) {
                case '<':
                    goto yy72;
                case '=':
                    goto yy73;
                default:
                    goto yy29;
            }
        yy29:
#line 264 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::LT);
        }
#line 458 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy30:
            yych = *++cursor_;
            switch (yych) {
                case '=':
                    goto yy74;
                default:
                    goto yy31;
            }
        yy31:
#line 253 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::ASSIGN);
        }
#line 468 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy32:
            yych = *++cursor_;
            switch (yych) {
                case '=':
                    goto yy75;
                case '>':
                    goto yy76;
                default:
                    goto yy33;
            }
        yy33:
#line 265 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::GT);
        }
#line 479 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy34:
            ++cursor_;
#line 237 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::QUESTION);
            }
#line 484 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy35:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy77;
                default:
                    goto yy36;
            }
        yy36:
#line 228 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
        {
            return make_token(Token_Type::IDENTIFIER);
        }
#line 557 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy37:
            ++cursor_;
#line 234 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::LBRACKET);
            }
#line 562 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy38:
            ++cursor_;
#line 235 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::RBRACKET);
            }
#line 567 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy39:
            ++cursor_;
#line 261 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.re"
            {
                return make_token(Token_Type::CARET);
            }
#line 572 "/Users/jahan-addison/Git/credence/credence/frontend/lexer.cc"
        yy40:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy77;
                case 'u':
                    goto yy78;
                default:
                    goto yy36;
            }
        yy41:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy77;
                case 'r':
                    goto yy79;
                default:
                    goto yy36;
            }
        yy42:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy77;
                case 'a':
                    goto yy80;
                default:
                    goto yy36;
            }
        yy43:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'y':
                case 'z':
                    goto yy77;
                case 'l':
                    goto yy81;
                case 'x':
                    goto yy82;
                default:
                    goto yy36;
            }
        yy44:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy77;
                case 'a':
                    goto yy83;
                default:
                    goto yy36;
            }
        yy45:
            yych = *++cursor_;
            switch (yych) {
                case '.':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'p':
                case 'q':
